# -Nav2-Costmap-ZoneFilter

./: CMakeLists.txt  README.md  map_zone_filter.xml  package.xml  zone_filter.xml
include/zone_filter/: zone_filter.hpp
launch/: filter_server.launch.py  keepout_filter_server.launch.py  multi_filter_bringup.launch.py  zone_filter_launch.py
maps/: binary_mask.pgm  binary_mask.yaml  keepout_mask.pgm  keepout_mask.yaml  zone_mask.pgm  zone_mask.yaml
params/: binary_params.yaml  keepout_params.yaml  zone_params.yaml
src/: zone_filter.cpp
